@@ -257,7 +257,14 @@ x Zint32: still has a few bugs when running unittests because
     b hamsterdb::Zint32::Zint32KeyList::copy_to
     x then once more check the monster tests
 
+<<<<<<< HEAD
 >>>>>>> Refactoring of LocalDatabase::find, cursor_find (wip)
+=======
+x remove dependency to malloc.h, use stdlib.h instead
+
+x add patches from Thomas Fähnle
+
+>>>>>>> Fixed large file support on linux
 o refactoring: clean up the whole Database code; it's too much and too
     complex; there must be an absolutely clear border between Btree and
     Transaction related code.
@@ -285,23 +292,30 @@ o cherry-pick the following commits on the master branch
     1447ba4eb217532e8fb49c4a84a0dc3b982a3ffe
     6a8dd20ec9bd2ec718d1136db7667e0e58911003
 
-x remove dependency to malloc.h, use stdlib.h instead
-
-o add patches from Thomas Fähnle
+o Zint32: add compression based on bit-packing
+    -> https://github.com/lemire/simdcomp/blob/master/include/simdintegratedbitpacking.h
+    x add parameter to header file
+    x support in ham_bench
+    x update IndexFactory for the new KeyList
+    x move block/index related functionality to a base class BlockKeyList
+        (w/ template parameter for the block structure)
+    o integrate Daniel's sources as a library
+    o implement the compression
+        o don't use index->used_size, index->block_size; they're always
+            static
+        o use delta-encoding to have better compression
+        o keep track of the bits required to encode a block
+        o blocks have a fixed size; no need to resize them, as long as the
+            bit width is not increased
+        o vacuumize: try to create blocks for 128 integers!
+            merge blocks if
+              - both blocks have <= 128 keys
+              - the last key of a block == the first key of the next block - 1
+        . need a solution without simd!?
 
 o migrate to libuv 1.0, it has a stable API
     http://docs.libuv.org/en/latest/migration_010_100.html
     o also for windows!
-
-o Zint32: add compression based on bit-packing
-    -> https://github.com/lemire/simdcomp/blob/master/include/simdintegratedbitpacking.h
-    o move block/index related functionality to a base class BlockKeyList
-        (w/ template parameter for the block structure)
-    o add parameter to header file
-    o support in ham_bench
-    o implement the compression
-        -> only use as many bits per block as required for those numbers
-        -> use delta-encoding to have better compression
 
 o refactoring: improve the code separation of cursor, btree_cursor
     and txn_cursor, i.e. in db_local::cursor_get_record_size (wtf - is_null(0)?)
