@@ -9,6 +9,9 @@ Dec 30, 2014 - chris ---------------------------------------------------
 o issue #43: fixed segfault when flushing transactions (thanks, Joel
 	Jacobson)
 
+Nov 28, 2014 - chris ---------------------------------------------------
+o Fixed large file support on linux (thanks, Thomas Fähnle)
+
 Nov 27, 2014 - chris ---------------------------------------------------
 o Removed dependency to malloc.h
 o issue #42: ham_cursor_find returned wrong key w/ approx. matching and
